--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Tous les fichiers d'extensions:
 *.tmp
 *.docx
+*.xlsb
 # Tout le contenu du répertoire suivant:
 /WorkItems
 # Tout le contenu du répertoire suivant:
